name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10
library
  exposed-modules:   Hangman
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.7 && <5
                   , random
                   , split
                   , QuickCheck
  hs-source-dirs:    src
  default-language:  Haskell2010
                     
executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , hangman
                     , QuickCheck                  
  default-language:    Haskell2010
  
test-suite tests
  ghc-options:       -Wall -fno-warn-orphans
  type:              exitcode-stdio-1.0
  main-is:           Test.hs
  hs-source-dirs:    tests
  build-depends:     base >=4.7 && <5
                   , hangman
                   , hspec
                   , QuickCheck
  default-language:  Haskell2010